unpackaged/main/default/objects/WorkOrderLineItem/fields/Active_Cost__c.field-meta.xml
<CustomField>
    <fullName>Active_Cost__c</fullName>
    <description>The active unit cost for this Product (if ATS Product)</description>
    <formula>Product2.Average_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The active unit cost for this Product (if ATS Product)</inlineHelpText>
    <label>Active Cost (Lookup)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>