unpackaged/main/default/objects/WorkOrderLineItem/fields/ATS_Bulk_Product__c.field-meta.xml
<CustomField>
    <fullName>ATS_Bulk_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this is an ATS Product sold in Bulk (Tons, Bulk or 2000LB in SKU)</description>
    <label>ATS Bulk Product</label>
    <type>Checkbox</type>
</CustomField>