unpackaged/main/default/objects/WorkOrderLineItem/fields/Bulk_Product__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Product__c</fullName>
    <description>Indicates if the ATS Product Name is a Bulk SKU (Bulk, Tons or 2000LB)</description>
    <formula>OR(CONTAINS(Product_Name__c, &quot;TON&quot;),CONTAINS(Product_Name__c, &quot;BULK&quot;),CONTAINS(Product_Name__c, &quot;2000LB&quot;))</formula>
    <inlineHelpText>Indicates if the ATS Product Name is a Bulk SKU (Bulk, Tons or 2000LB)</inlineHelpText>
    <label>Bulk Product?</label>
    <type>Checkbox</type>
</CustomField>