unpackaged/main/default/objects/WorkOrderLineItem/fields/Cost_Per_1_000__c.field-meta.xml
<CustomField>
    <fullName>Cost_Per_1_000__c</fullName>
    <label>Cost Per 1,000</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>