unpackaged/main/default/objects/WorkOrderLineItem/fields/Cost_Per_Acre__c.field-meta.xml
<CustomField>
    <fullName>Cost_Per_Acre__c</fullName>
    <label>Cost Per Acre</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>