unpackaged/main/default/objects/WorkOrderLineItem/fields/Cost_Validated__c.field-meta.xml
<CustomField>
    <fullName>Cost_Validated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the cost has been validated before sending to Salespad for Invoicing</description>
    <label>Cost Validated?</label>
    <type>Checkbox</type>
</CustomField>