unpackaged/main/default/objects/WorkOrderLineItem/fields/EPA__c.field-meta.xml
<CustomField>
    <fullName>EPA__c</fullName>
    <label>EPA #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>