unpackaged/main/default/objects/WorkOrderLineItem/fields/Extended_Price__c.field-meta.xml
<CustomField>
    <fullName>Extended_Price__c</fullName>
    <label>Extended Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>