unpackaged/main/default/objects/WorkOrderLineItem/fields/Line_Description__c.field-meta.xml
<CustomField>
    <fullName>Line_Description__c</fullName>
    <label>Line Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>