unpackaged/main/default/objects/WorkOrderLineItem/fields/Per_1_000__c.field-meta.xml
<CustomField>
    <fullName>Per_1_000__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Per 1,000</label>
    <type>Checkbox</type>
</CustomField>