unpackaged/main/default/objects/WorkOrderLineItem/fields/PO_Number__c.field-meta.xml
<CustomField>
    <fullName>PO_Number__c</fullName>
    <label>Customer PO #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>