unpackaged/main/default/objects/WorkOrderLineItem/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <formula>Text(Product2.Product_Category__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Category</label>
    <type>Text</type>
</CustomField>