unpackaged/main/default/objects/WorkOrderLineItem/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <description>The Product Name in Salesforce - will be shown as additional description on ERP Invoice</description>
    <formula>Product2.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Product Name in Salesforce - will be shown as additional description on ERP Invoice</inlineHelpText>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>