unpackaged/main/default/objects/WorkOrderLineItem/fields/Re_Entry_Period__c.field-meta.xml
<CustomField>
    <fullName>Re_Entry_Period__c</fullName>
    <label>Re-Entry Period</label>
    <length>255</length>
    <type>Text</type>
</CustomField>