unpackaged/main/default/objects/WorkOrderLineItem/fields/SalesPad_Comment__c.field-meta.xml
<CustomField>
    <fullName>SalesPad_Comment__c</fullName>
    <description>Is set in a flow work order schedule. Is picked up by smartconnect to go to salespad</description>
    <label>SalesPad Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>