unpackaged/main/default/objects/WorkOrderLineItem/fields/Ship_Product__c.field-meta.xml
<CustomField>
    <fullName>Ship_Product__c</fullName>
    <description>The Sales Order # of the ordered product in our ERP (Salespad/GP)</description>
    <inlineHelpText>The Sales Order # of the ordered product in our ERP (Salespad/GP)</inlineHelpText>
    <label>Ship Product #</label>
    <length>30</length>
    <type>Text</type>
</CustomField>