unpackaged/main/default/objects/WorkOrderLineItem/fields/Ship_Product_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Ship_Product_Ordered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Will be checked by the SmartConnect job if successfully created Sales Order for this Work Order Product</description>
    <label>Ship Product Ordered</label>
    <type>Checkbox</type>
</CustomField>