unpackaged/main/default/objects/WorkOrderLineItem/fields/Ship_Product_To__c.field-meta.xml
<CustomField>
    <fullName>Ship_Product_To__c</fullName>
    <description>Indicates that this is ATS Product and it is ready to be shipped Direct to Customer or Warehouse</description>
    <inlineHelpText>Indicates that this is ATS Product and it is ready to be shipped Direct to Customer or Warehouse</inlineHelpText>
    <label>Ship Product To:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Customer - Paid Via CC</fullName>
            </value>
            <value>
                <fullName>Warehouse</fullName>
            </value>
            <value>
                <fullName>Warehouse - Pick Up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>