unpackaged/main/default/objects/WorkOrderLineItem/fields/Ship_Product_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Ship_Product_Vendor__c</fullName>
    <label>Ship Product Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ATS</fullName>
            </value>
            <value>
                <fullName>Aeroflo</fullName>
            </value>
            <value>
                <fullName>Arms Trucking</fullName>
            </value>
            <value>
                <fullName>Beaver Materials</fullName>
            </value>
            <value>
                <fullName>Beelman Trucking</fullName>
            </value>
            <value>
                <fullName>Diamond Pro</fullName>
            </value>
            <value>
                <fullName>Fick</fullName>
            </value>
            <value>
                <fullName>Kafka</fullName>
            </value>
            <value>
                <fullName>Kurtz</fullName>
            </value>
            <value>
                <fullName>Liesener Soils</fullName>
            </value>
            <value>
                <fullName>Madison Co Sand</fullName>
            </value>
            <value>
                <fullName>Mckinley Custom Sports</fullName>
            </value>
            <value>
                <fullName>Meyers Sod Farm</fullName>
            </value>
            <value>
                <fullName>Mid Michigan Materials</fullName>
            </value>
            <value>
                <fullName>Payne Sod Farm</fullName>
            </value>
            <value>
                <fullName>SAF</fullName>
            </value>
            <value>
                <fullName>Shelby</fullName>
            </value>
            <value>
                <fullName>Waupaca</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>