unpackaged/main/default/objects/WorkOrderLineItem/fields/Target_Area_Detail__c.field-meta.xml
<CustomField>
    <fullName>Target_Area_Detail__c</fullName>
    <label>Target Area Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>