unpackaged/main/default/objects/WorkOrderLineItem/fields/Target_Area_sqft__c.field-meta.xml
<CustomField>
    <fullName>Target_Area_sqft__c</fullName>
    <label>Target Area (sq ft)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>