unpackaged/main/default/objects/WorkOrderLineItem/validationRules/Cant_Change_Package_Product_Cost.validationRule-meta.xml
<ValidationRule>
    <fullName>Cant_Change_Package_Product_Cost</fullName>
    <active>false</active>
    <description>Prevent user from accidentally changing package product cost</description>
    <errorConditionFormula>AND(ISPICKVAL(PricebookEntry.Product2.Product_Category__c ,&#39;Packaged Product&#39; ),
 ISCHANGED(Cost__c)  )</errorConditionFormula>
    <errorMessage>You can&#39;t update a package product cost</errorMessage>
</ValidationRule>