unpackaged/main/default/objects/WorkOrderLineItem/validationRules/Vendor_Required_on_Ship_to_Customer.validationRule-meta.xml
<ValidationRule>
    <fullName>Vendor_Required_on_Ship_to_Customer</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Ship_Product_To__c, &quot;Customer&quot;),
  ISBLANK(TEXT(Ship_Product_Vendor__c))
)</errorConditionFormula>
    <errorDisplayField>Ship_Product_Vendor__c</errorDisplayField>
    <errorMessage>Please Select a Vendor for Product being Shipped Straight to the Customer</errorMessage>
</ValidationRule>